# mslearn

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  profiles.yaml  pyproject.toml
evals/golden/: clustering.jsonl  extraction.jsonl  grounding.jsonl  tension.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.css  main.tsx
mslearn/: chunking.py  ingest_cli.py  logging_setup.py  opsdb.py  profiles.py  prompts.py  settings.py  synth_cli.py  transcribe.py
mslearn/adapters/: audio.py  base.py  blog.py  docx_src.py  epub.py  htmltext.py  image.py  markdown_src.py  pdf.py  registry.py  text.py  youtube.py
mslearn/evals/: evolve.py  evolve_cli.py  gates.py  golden.py  judged.py  metrics.py  patterns.py  run.py  seed.py  (+1 more)
scripts/: dev_up.sh  make_smoke_corpus.py  release_check.sh  smoke_providers.py
tests/: conftest.py  fakes.py  test_adapter_base.py  test_audio_adapter.py  test_blog_adapter.py  test_categories.py  test_chunking.py  test_claude_code_provider.py  test_clustering.py  test_compose.py  test_conflict_pass.py  test_corpus_retry.py  test_curriculum.py  test_docx_adapter.py  test_epub_adapter.py  test_eval_evolve.py  test_eval_gates.py  test_eval_metrics.py  test_eval_seed.py  test_evals_pending_api.py  test_exports.py  test_extract_no_double_embed.py  test_extraction_contracts.py  test_extraction_graph.py  test_gates.py  test_golden.py  test_golden_guide.py  test_graph_claims.py  test_graph_concepts.py  test_graph_export.py  test_graph_ingest.py  test_graph_project_isolation.py  test_graph_records.py  test_graph_store.py  test_graph_synthesis_queries.py  test_guide_claims_kind.py  test_guide_contract.py  test_guide_gen.py  test_guides_queued.py  test_htmltext.py  (+50 more)
(+111 files in other folders)
