[project]
name = "mslearn"
version = "1.0.0"
description = "Personal multi-source learning system"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mslearn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["evals: release-gate eval suite (needs live backends)"]

[tool.ruff]
line-length = 100
