[project]
name = "mslearn"
version = "1.0.0"
description = "Personal multi-source learning system"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "trafilatura>=1.8",
    "youtube-transcript-api>=1.0",
    "yt-dlp>=2024.4.9",
    "faster-whisper>=1.0",
    "neo4j>=5.20",
    "celery[redis]>=5.4",
    "langgraph>=0.2",
    "rapidfuzz>=3.9",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "genanki>=0.13",
    "mem0ai>=0.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.4", "hypothesis>=6.100"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mslearn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "evals: release-gate eval suite (needs live backends)",
    "neo4j: integration tests requiring a running Neo4j",
]

[tool.ruff]
line-length = 100
